# Concurrent-File-Downloader

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
src/: CMakeLists.txt  Client.cpp  Client.h  FileSystemHandler.cpp  FileSystemHandler.h  FileTransfer.cpp  FileTransfer.h  InputHandler.cpp  InputHandler.h  Server.cpp  main.cpp
src/Client/: CMakeLists.txt  Client.cpp
src/FileSystemHandler/: CMakeLists.txt  FileSystemHandler.cpp  FileSystemHandler.h
src/FileTransfer/: CMakeLists.txt  FileTransfer.cpp  FileTransfer.h
src/InputHandler/: CMakeLists.txt  InputHandler.cpp
src/Server/: CMakeLists.txt  Server.cpp  Server.h
