set(FILE_SYSTEM_HANDLER_SOURCES
    "FileSystemHandler.cpp")
set(FILE_SYSTEM_HANDLER_HEADERS
    "FileSystemHandler.h")

add_library(${FILE_SYSTEM_HANDLER_LIB_NAME} STATIC
    ${FILE_SYSTEM_HANDLER_SOURCES}
    ${FILE_SYSTEM_HANDLER_HEADERS})

set(FILE_SYSTEM_HANDLER_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR})